--- a/cloud-doc/src/App.css
+++ b/cloud-doc/src/App.css
@@ -11,3 +11,25 @@
 .c-link {
   cursor: pointer;
 }
+
+.start-page {
+  font-size: 30px;
+  height: 300px;
+  line-height: 300px;
+  color: #ccc;
+  text-align: center;
+}
+
+.left-panel {
+  min-height: 100vh;
+}
+
+.button-group {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+}
+
+.no-border {
+  border-radius: 0!important;
+}
